--- a/src/components/MapComponent/MapComponent.module.css
+++ b/src/components/MapComponent/MapComponent.module.css
@@ -1,4 +1,5 @@
 .mapWrapper{
   width: 100%;
   height: 50rem;
+  z-index: 1;
 }
