--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -9,13 +9,6 @@
   overflow: hidden;
   z-index: 100;
 }
-/* .menuIcon {
-  display: block;
-}
-.icon {
-  display: block;
-  height: 4.3rem;
-} */
 .menuIcon {
   position: relative; /* ← 必須 */
   display: block;
@@ -37,7 +30,7 @@
 .hederBtn {
   position: relative;
   background: none;
-  z-index: 100;
+  z-index: 1001;
   border: none;
 }
 .nav {
@@ -50,6 +43,7 @@
   width: 100%;
   height: 100vh;
   opacity: 0;
+  z-index: 1000;
   /* ct */
   visibility: hidden;
 }
